// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Edit draft]  Form data to edit draft 1`] = `
Object {
  "bccEmails": Array [
    "bccUser@criptext.com",
  ],
  "ccEmails": Array [
    "ccUser@criptext.com",
  ],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    "toUser@criptext.com",
  ],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to forward 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "FW: Email subject 1",
  "threadId": undefined,
  "toEmails": Array [],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply email 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "email": "fromUser@criptext.com",
    },
  ],
}
`;

exports[`[Reply, Reply-all, Forward]  Form data to reply-all 1`] = `
Object {
  "bccEmails": Array [],
  "ccEmails": Array [
    Object {
      "email": "ccUser@criptext.com",
    },
    Object {
      "email": "toUser@criptext.com",
    },
  ],
  "htmlBody": "<p>Modified body content</p>",
  "textSubject": "RE: Email subject 1",
  "threadId": "1",
  "toEmails": Array [
    Object {
      "email": "fromUser@criptext.com",
    },
  ],
}
`;
